--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <button class="btn" data-nav="screen-community">Community Charts</button>
                     <button class="btn" data-nav="screen-profile">Profile</button>
                     <button class="btn" data-nav="screen-options">Options</button>
+                    <button class="btn admin-btn" onclick="showAdminLogin()">Admin Panel</button>
                 </div>
 
                 <div class="card" style="margin:16px auto; width:min(860px,95vw)">
