Fix Teto Medicine chart paths and add file testing functionality

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <button class="btn" data-nav="screen-profile">Profile</button>
                     <button class="btn" data-nav="screen-options">Options</button>
                     <button class="btn admin-btn" onclick="showAdminLogin()">Admin Panel</button>
+                    <button class="btn test-btn" onclick="testFileAccess()">Test Files</button>
                 </div>
 
                 <div class="card" style="margin:16px auto; width:min(860px,95vw)">
