--- a/main-menu.html
+++ b/main-menu.html
@@ -28,13 +28,12 @@
             <!-- Main Menu -->
             <section id="screen-main" class="screen active">
                 <div class="menu">
-                    <button class="btn primary" onclick="window.location.href='song-select.html'">Play</button>
-                    <button class="btn" onclick="window.location.href='editor.html'">Editor</button>
-                    <button class="btn" onclick="window.location.href='community.html'">Community Charts</button>
-                    <button class="btn" onclick="window.location.href='profile.html'">Profile</button>
-                    <button class="btn" onclick="window.location.href='options.html'">Options</button>
-                    <button class="btn admin-btn" onclick="showAdminLogin()">Admin Panel</button>
-                    <button class="btn test-btn" onclick="testFileAccess()">Test Files</button>
+                    <button class="btn primary large" onclick="window.location.href='song-select.html'">🎵 Play</button>
+                    <button class="btn" onclick="window.location.href='editor.html'">✏️ Editor</button>
+                    <button class="btn" onclick="window.location.href='profile.html'">👤 Profile</button>
+                    <button class="btn" onclick="window.location.href='options.html'">⚙️ Options</button>
+                    <button class="btn admin-btn" onclick="showAdminLogin()">🔐 Admin Panel</button>
+                    <button class="btn test-btn" onclick="testFileAccess()">🧪 Test Files</button>
                 </div>
 
                 <div class="card" style="margin:16px auto; width:min(860px,95vw)">
